# nebulosa.ts

./: .editorconfig  .env.test  .gitattributes  .gitignore  .gitmodules  .mcp.json  .npmignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierrc  AGENTS.md  CLAUDE.md  FIRMATA.md  LICENSE  Makefile  README.md  REVIEW.md  biome.json  bunfig.toml  eslint.config.mjs  package.json  postinstall.ts  tsconfig.json  types.d.ts
.claude/: settings.json
.codex/: AGENTS.md  config.toml  hooks.json
.github/: FUNDING.yml  dependabot.yml
data/: .gitignore  CometEls.txt  ephemeris.csv
examples/: almanac.ts  alpaca.client.ts  alpaca.server.ts  alpaca.ts  eclipse.sun.ts  firmata.ts  lx200.ts  phd2.ts  sun.eclipse.map.ts
firmata/: platformio.ini
native/: .gitignore  copy.ts
scripts/: alpaca.py  altaz_star.py  asteroid.py  astro.py  astrometry.py  bcrs_star.py  cirs_star.py  codebase.index.ts  comet.py  era.py  erfa.c  frame.py  gast.py  gcrs_star.py  gmst.py  hadec_star.py  icrs_star.py  iers.py  iersa.py  iersb.py  jyear.py  lst.py  lunar.eclipse.ts  observed_altaz_star.py  oxlint.rules.ts  print.py  pyproject.toml  solar.eclipse.ts  time.py  timescale.py
scripts/astropy/: frame.py  iers.py  time.py
scripts/skyfield/: location.py  time.py
src/: alignment.ts  alpaca.api.ts  alpaca.client.ts  alpaca.discovery.ts  alpaca.server.ts  alpaca.types.ts  angle.test.ts  angle.ts  astap.test.ts  astap.ts  asteroid.ts  astrobin.test.ts  astrobin.ts  astrometry.test.ts  astrometry.ts  astrometrynet.index.ts  astrometrynet.ts  autofocus.ts  compression.ts  constants.ts  coordinate.ts  (+193 more)
(+770 files in other folders)
