[project]
name = "nebulosa"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.0.1",
    "pandas>=2.2.3",
    "sgp4>=2.24",
    "skyfield>=1.53",
]

[tool.ruff]
line-length = 999

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
